Hidden API credentials

--- a/taylor-swift.ipynb
+++ b/taylor-swift.ipynb
@@ -8,8 +8,8 @@
    "source": [
     "import spotipy \n",
     "from spotipy.oauth2 import SpotifyClientCredentials\n",
-    "client_id = \"a1849ce2c49a4881b8b04b6d3547fc0b\"\n",
-    "client_secret = \"d7eda190b15446e1af86baf6731e89cf\"\n",
+    "client_id = \"*********************\"\n",
+    "client_secret = \"***********************\"\n",
     "client_credentials_manager = SpotifyClientCredentials(client_id=client_id, client_secret=client_secret)\n",
     "sp = spotipy.Spotify(client_credentials_manager=client_credentials_manager) \n",
     "import requests\n",
